# kms

./: .gitignore  AGENTS.md  README.md  cc_kms_review_by_codex.md  config.m14.baseline.yaml  config.notes-frontmatter.yaml  config.yaml  pyproject.toml  tmp-aoi-ask.json  tmp-aoi-search.json  tmp-ask-game-concurrency.json  tmp-ask-paxos.json
.claude/: settings.local.json
.run-logs/: ask-context.json  ask-coroutine.json  ask-latest.json  kms-api.log.2026-04-15  kms-api.pid.json  search-coroutine.json  search-latest.json
app/: __init__.py  config.py  main.py  metadata_utils.py  observability.py  query_understanding.py  retrieval_pipeline_config.py  runtime_cleanup.py  schemas.py  timefmt.py
dev-plan/: a1-architecture-hardening.md  a2-retrieval-context-uplift.md  a3-retrieval-closure-and-adaptive-fusion.md  cc_kms.md  codex_kms.md  codex_kms_review_by_cc.md  kms_final_plan.md  m10-obs-local-launch-runbook.md  m11-rag-eval-hardening.md  m12-obs-local-bilingual-locale.md  m12-retrieval-hotpath-batching.md  m13-rag-data-cleaning-plan.md  m14-cleaning-stage0-inventory.md  m14-general-troubleshooting-methodology.md  m14-rag-cleaning-stage2.md  m14-rag-troubleshooting-methodology.md  m14-troubleshooting-checklist.md  m15-ranking-and-dedup-quality.md  m16-m18-rag-optimization-roadmap.md  m19-m24-rag-operational-roadmap.md  m6-host-file-answering.md  m7-remove-full-file-mode.md  m8-obs-local-protocol-compat.md  m9-mykms-canonical-event-protocol.md  real10-regression-eval.md  优化方案方法论版.md  优化方案通用模板.md  如何高效提升RAG知识库的质量？.txt
dev-run/: README.md  agent-board.md  issue-log.md  (+4 more)
(+308 files in other folders)
