[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kms-api"
version = "0.1.0"
description = "FastAPI scaffold for the personal knowledge base service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5,<2.0",
    "fastapi>=0.115,<1.0",
    "jieba>=0.42,<1.0",
    "pydantic>=2.8,<3.0",
    "PyYAML>=6.0,<7.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
]
models = [
    "FlagEmbedding>=1.3,<2.0",
]

[project.scripts]
kms-api = "app.main:run"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
